<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_dessert">Choose Dessert</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches_have_chocolate_and_vanilla_filling">ice cream sandwiches have chocolate and vanilla filling</string>
    <string name="froyo_is_a_premium_self_serve_frozen_yogurt">Froyo is a premium self-serve frozen yogurt</string>
    <string name="donut_order">You have ordered the donut</string>
    <string name="ice_cream_order">You have ordered Ice cream sandwich</string>
    <string name="froyo_order">You have ordered Froyo</string>
    <string name="choose_delivery_method">Choose Delivery method</string>
    <string name="same_day_messenger_service">Same Day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick-Up</string>
    <string name="about_us">About us</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="call_us">Call Us</string>
    <string name="locate_us">Locate Us</string>
    <string name="name">name</string>
    <string name="alphonce_mutebi">Alphonce Mutebi</string>
    <string name="address">address</string>
    <string name="apartment">Apartment</string>
    <string name="phone">phone</string>
    <string name="note">note</string>


</resources>
