<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">
    
    <TextView
        android:id="@+id/display_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/display_order"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/alphonce_mutebi"
            android:textColor="@android:color/black"
            android:inputType="text"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />
        <EditText
            android:id="@+id/address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/apartment"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine"
            android:autofillHints="@string/address" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="_0726111690"
            android:textColor="@android:color/black"
            android:inputType="phone"
            android:maxLength="10"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />
        <EditText
            android:id="@+id/note"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/write_a_note_for_this_order"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine"
            android:maxLength="150" />

    </LinearLayout>

    <TextView
        android:id="@+id/delivery_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_delivery_method"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/display_order"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/delivery_method"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/same_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_messenger_service"
            android:onClick="onRadioButtonClicked"
            android:textColor="@color/colorPrimaryDark"/>
        <RadioButton
            android:id="@+id/next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_ground_delivery"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onRadioButtonClicked"/>




    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>